# jt_pixel

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: windows-installer.yml
src/: App.tsx  gifenc.d.ts  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  screen_picker.rs
src/components/: Brand.tsx  CanvasOperationsDialog.tsx  CanvasStage.tsx  CanvasViewMenu.tsx  ColorPanel.tsx  ColorReplaceDialog.tsx  ExportStudioDialog.tsx  ExportToast.tsx  ImportStudioDialog.tsx  Inspector.tsx  LayersPanel.tsx  PanelHeader.tsx  PixelLayerCanvas.tsx  PixelLens.tsx  ProjectNewDialog.tsx  ProjectOpenDialog.tsx  ProjectRecoveryDialog.tsx  ProjectToast.tsx  ScreenPickerToast.tsx  SelectionToolbar.tsx  StatusBar.tsx  TilePanel.tsx  TilePreview.tsx  Timeline.tsx  ToolPanel.tsx  ToolRail.tsx  TopBar.tsx  UpdateSettings.tsx  UpdateToast.tsx  importStudioFields.test.ts  importStudioFields.ts
src/data/: editor.ts
src/editor/: canvasNavigation.test.ts  canvasNavigation.ts  canvasView.test.ts  canvasView.ts  colorOperations.test.ts  colorOperations.ts  compositing.test.ts  compositing.ts  export.test.ts  export.ts  exportCanvas.ts  gifEncoder.ts  gifEncoder.worker.ts  gifEncodingCore.test.ts  gifEncodingCore.ts  history.test.ts  history.ts  importOperations.test.ts  importOperations.ts  magicSelection.test.ts  magicSelection.ts  pixels.test.ts  pixels.ts  precisionShapes.test.ts  precisionShapes.ts  project.test.ts  project.ts  projectFile.test.ts  projectFile.ts  selection.test.ts  selection.ts  selectionHistory.test.ts  selectionHistory.ts  selectionRegion.ts  tiles.test.ts  tiles.ts  timeline.test.ts  timeline.ts
src/hooks/: useAppUpdater.ts  useCanvasViewPreferences.ts  useColorWorkspace.ts  useExportPreferences.ts  (+7 more)
(+7 files in other folders)
