[package]
name = "jt-pixel"
version = "0.3.2"
description = "A focused pixel art and sprite animation studio"
authors = ["JT Pixel contributors"]
edition = "2024"

[lib]
name = "jt_pixel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1"
tauri = { version = "2.11.5", features = [] }
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.1"
